tests/tools/typecheck/positive/enum_member_compare.nv
enum Color {
    Red;
    Green;
}

fn main() : void {
    let c : Color = Color.Red;
    if (c == Color.Red) {
        print_str("red");
    }
    return;
}
