tests/tools/typecheck/negative/let_type_mismatch.nv
fn main() : void {
    let x : int = "hello";
    return;
}
